buildscript {
  repositories {
    maven { url "https://repo.maven.apache.org/maven2/" }
    jcenter()
  }
  ext { springBootVersion = '2.0.5.RELEASE' }
  dependencies {
    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
  }
}

plugins {
  id 'java'
  id "io.spring.dependency-management" version "1.0.5.RELEASE"
  id 'org.sonarqube' version '2.6.2'
  id 'jacoco'
}

group 'com.demo'
version = properties['project.version']

sourceCompatibility = 1.8
targetCompatibility = 1.8

apply plugin: 'java'
apply plugin: 'maven-publish'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

apply from: "${rootDir}/dependencies.gradle"

repositories {
  maven { url "${artifactory_contextUrl}/libs-release-staging" }
  maven { url "${artifactory_contextUrl}/libs-all" }
  mavenCentral()
  jcenter()
}

// Spring + GraphQL dependencies
dependencies {
  compile 'org.springframework.boot:spring-boot-starter-actuator'
  compile 'org.springframework.boot:spring-boot-starter-web'
  compile 'org.springframework.boot:spring-boot-starter-log4j:1.3.8.RELEASE'
  compile 'com.graphql-java-kickstart:graphql-spring-boot-starter:5.3.1'
  compile 'com.graphql-java-kickstart:graphiql-spring-boot-starter:5.3.1'
  compile 'com.graphql-java-kickstart:voyager-spring-boot-starter:5.3.1'
  compile 'com.jayway.jsonpath:json-path:2.4.0'
}

test {
  useJUnit()

  testLogging.showStandardStreams = false

  ignoreFailures = true

  minHeapSize = "256m"
  maxHeapSize = "1024m"

  jvmArgs '-XX:MaxPermSize=512m'
}

dependencyManagement {
  dependencies {
    // due to exception when reloading from idea.
    dependency "org.jetbrains.kotlin:kotlin-stdlib:1.3.0"
  }
}

configurations {
  all*.exclude module: 'spring-boot-starter-logging'
}

